[package]
name = "application_scope_to_compose_application"
version = "0.1.0"
edition = "2021"
authors = ["JoonHo Son <joonho.son@me.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.17"
log4rs = "1.2.0"
